--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     width: 100vw;
     display: flex;
     flex-direction: column;
+    font-family: Roboto;
 }
 
 header {
@@ -55,9 +56,33 @@ main {
 footer {
     height: 15%;
     width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     background-color: var(--primary-color);
+    color: var(--secundary-color);
 }
 
 .contatos {
     display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.contato {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.contatoPin {
+    padding-left: 4px;
+}
+
+.midiasSociais{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
 }
