--- a/style.css
+++ b/style.css
@@ -1,34 +1,33 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --primary-color: #3347B0;
-    --secundary-color: #ffffff;
+  --primary-color: #3347b0;
+  --secundary-color: #ffffff;
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    font-family: Roboto;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
 }
 
 header {
-    height: 10%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 96px;
-    padding-right: 96px;
-    background-color: var(--primary-color);
-}
+  min-height: 100px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 96px;
+  padding-right: 96px;
+  background-color: var(--primary-color);
 
-.iconName {
+  .iconName {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,95 +35,149 @@ header {
     font-size: 1.5rem;
     font-weight: bold;
     color: var(--secundary-color);
-}
+  }
 
-.back {
+  .back {
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 2rem;
     font-weight: 500;
     color: white;
+  }
 }
 
-main {    
-    flex-grow: 1;
+main {
+  display: flex;
+  flex-grow: 1;
+
+  /*-----------------------------HOME-----------------------------*/
+  .container-home {
+    height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-}
+    font-family: Roboto;
+    display: none;
 
-.fraseImagem {
-    font-size: 3.5rem;
-    color: #353535;
+    .fraseImagem {
+      font-size: 3.5rem;
+      color: #353535;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      gap: 64px;
+    }
+
+    .fraseImagem span {
+      color: var(--primary-color);
+    }
+
+    .cursos {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      gap: 50px;
+    }
+
+    .curso {
+      height: 200px;
+      width: 400px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 4rem;
+      background-color: var(--primary-color);
+      color: var(--secundary-color);
+      gap: 24px;
+      box-shadow: 12px 12px 5px #3347b080;
+      transition: 0.2s ease;
+      cursor: pointer;
+    }
+
+    .curso:hover {
+      transform: scale(1.1);
+    }
+  }
+
+  /*-----------------------------ALUNOS-----------------------------*/
+  .container-alunos {
+    height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
-    gap: 64px;
-}
+    padding-top: 35px;
+    /* display: none; */
+  }
 
-.fraseImagem span {
-    color: var(--primary-color);
-}
-
-.cursos {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 50px;
-}
-
-.curso {
-    height: 200px;
-    width: 400px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .title {
     font-size: 4rem;
-    background-color: var(--primary-color);
-    color: var(--secundary-color);
-    gap: 24px;
-    box-shadow: 12px 12px 5px #3347B080;
-    transition: 0.2s ease;
-}
+    color: var(--primary-color);
+  }
 
-.curso:hover {
-    transform: scale(1.1);
+  .cards {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 60px;
+    font-family: Poppins;
+    padding-bottom: 114px;
+  }
+
+  .card {
+    height: 300px;
+    width: 200px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 1.1rem;
+    gap: 16px;
+    background-color: var(--primary-color);
+    box-shadow: 8px 8px 12px #00000040;
+  }
+
+  .card span {
+    color: var(--secundary-color);
+    text-align: center;
+  }
 }
 
 footer {
-    height: 15%;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--primary-color);
-    color: var(--secundary-color);
-}
+  min-height: 140px;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--primary-color);
+  color: var(--secundary-color);
 
-.contatos {
+  .contatos {
     display: flex;
     justify-content: center;
     flex-direction: column;
     gap: 4px;
-}
-
-.contato {
+  }
+  
+  .contato {
     display: flex;
     align-items: center;
     gap: 24px;
-}
-
-.contatoPin {
+  }
+  
+  .contatoPin {
     padding-left: 4px;
-}
-
-.midiasSociais{
+  }
+  
+  .midiasSociais {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 20px;
+  }
+
 }
