--- a/style.css
+++ b/style.css
@@ -111,40 +111,66 @@ main {
     align-items: center;
     flex-direction: column;
     padding-top: 35px;
-    /* display: none; */
+    display: none;
+
+    .title {
+      font-size: 4rem;
+      color: var(--primary-color);
+    }
+
+    .cards {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 60px;
+      font-family: Poppins;
+      padding-bottom: 114px;
+    }
+
+    .card {
+      height: 300px;
+      width: 200px;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      font-size: 1.1rem;
+      gap: 16px;
+      background-color: var(--primary-color);
+      box-shadow: 8px 8px 12px #00000040;
+    }
+
+    .card span {
+      color: var(--secundary-color);
+      text-align: center;
+    }
   }
 
-  .title {
-    font-size: 4rem;
-    color: var(--primary-color);
+  .container-aluno {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
   }
 
-  .cards {
+  .profile {
+    height: 500px;
+    width: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
-    gap: 60px;
-    font-family: Poppins;
-    padding-bottom: 114px;
-  }
-
-  .card {
-    height: 300px;
-    width: 200px;
-    display: flex;
-    align-items: center;
     flex-direction: column;
-    font-size: 1.1rem;
-    gap: 16px;
-    background-color: var(--primary-color);
-    box-shadow: 8px 8px 12px #00000040;
+    box-shadow: 0px 0px 10px 5px #00000040;
   }
 
-  .card span {
-    color: var(--secundary-color);
-    text-align: center;
+  .graphics {
+    height: 500px;
+    width: 500px;
+    box-shadow: 0px 0px 10px 5px #00000040;
   }
+
+
 }
 
 footer {
@@ -162,17 +188,17 @@ footer {
     flex-direction: column;
     gap: 4px;
   }
-  
+
   .contato {
     display: flex;
     align-items: center;
     gap: 24px;
   }
-  
+
   .contatoPin {
     padding-left: 4px;
   }
-  
+
   .midiasSociais {
     display: flex;
     align-items: center;
