--- a/style.css
+++ b/style.css
@@ -174,9 +174,22 @@ main {
       align-items: center;
       flex-direction: column;
       font-size: 1.1rem;
-      gap: 16px;
       background-color: var(--primary-color);
       box-shadow: 8px 8px 12px #00000040;
+      padding: 12px;
+    }
+
+    .card img {
+      height: 200px;
+      width: 100%;
+      border-radius: 50%;
+    }
+
+    .card div {
+      display: flex;
+      flex: 1;
+      align-items: center;
+      justify-content: center;
     }
 
     .card span {
