--- a/style.css
+++ b/style.css
@@ -175,14 +175,23 @@ main {
       flex-direction: column;
       font-size: 1.1rem;
       background-color: var(--primary-color);
-      box-shadow: 8px 8px 12px #00000040;
+      box-shadow: 8px 8px 12px #00000080;
       padding: 12px;
+      transition: 0.2s ease;
+
+    }
+
+    .card:hover {
+      img {
+        border-radius: 12px;
+      }
     }
 
     .card img {
       height: 200px;
       width: 100%;
       border-radius: 50%;
+      transition: 0.2s ease;
     }
 
     .card div {
@@ -215,7 +224,15 @@ main {
       align-items: center;
       justify-content: center;
       flex-direction: column;
+      font-size: 1.1rem;
+      gap: 4px;
+      color: var(--primary-color);
       box-shadow: 0px 0px 10px 5px #00000040;
+    }
+
+    .profile img {
+      height: 400px;
+      width: 400px;
     }
 
     .graphics {
@@ -236,7 +253,12 @@ main {
     .bar {
       height: 300px;
       width: 16px;
-      background-color: red;
+      display: flex;
+      align-items: flex-end;
+    }
+
+    .filledBar {
+      width: 100%;
     }
 
   }
