--- a/style.css
+++ b/style.css
@@ -216,6 +216,8 @@ main {
     align-items: center;
     justify-content: space-around;
     display: none;
+    text-shadow: 0px 3px 2px #00000040;
+    
 
     .profile {
       height: 500px;
@@ -225,9 +227,9 @@ main {
       justify-content: center;
       flex-direction: column;
       font-size: 1.1rem;
-      gap: 4px;
+      gap: 20px;
       color: var(--primary-color);
-      box-shadow: 0px 0px 10px 5px #00000040;
+      box-shadow: 0px 0px 10px 2px #0000009f;
     }
 
     .profile img {
@@ -247,6 +249,7 @@ main {
     .dataGraphics {
       display: flex;
       flex-direction: column;
+      align-items: center;
       gap: 17px;
     }
 
@@ -259,6 +262,7 @@ main {
 
     .filledBar {
       width: 100%;
+      box-shadow: 0 0 15px 5px rgba(193, 16, 16, 0.555);
     }
 
   }
